--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "stripe": "^14.2.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
