--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.4",
+    "@heroicons/react": "^2.1.5",
     "axios": "^1.6.0",
     "mongoose": "^7.6.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
