--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
     "axios": "^1.6.0",
+    "dotenv": "^16.4.5",
     "mongoose": "^7.6.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
