--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.6.0",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.451.0",
     "mongoose": "^7.6.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
