--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.7.1",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
+    "@nextui-org/react": "^2.4.8",
     "axios": "^1.6.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.451.0",
