--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.6.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
+    "nodemailer": "^6.9.15",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
